refs #63 - update receipt to be query by seller
