# fgt-api/swagger/docs/MAH.yml
@@ -1126,18 +1126,27 @@ paths:
                 status: 0
                 error: string
                 message: string
-  /receipt/get/{receiptId}:
+  /receipt/get/{gtin}/{batchNumber}/{serialNumber}:
     get:
       tags:
         - receipt
       summary: getOne
       parameters:
-        - name: receiptId
+        - name: gtin
           in: path
           schema:
             type: string
           required: true
-          description: receiptId format as follow gtin-batchNumber-serialNumber
+        - name: batchNumber
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: serialNumber
+          in: path
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           headers:
